@@ -101,7 +101,6 @@ $cursor->explain(
   }
 );
 Mojo::IOLoop->start;
-ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
 is $result, 1, 'one document';
 is $cursor->next->{test}, 2, 'right document';
@@ -122,7 +121,6 @@ $collection->find({test => {'$gt' => 1}})->distinct(
   }
 );
 Mojo::IOLoop->start;
-ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
 is_deeply [sort @$result], [2, 3], 'right values';
 
@@ -152,7 +150,6 @@ my $delay = Mojo::IOLoop->delay(
   }
 );
 $delay->wait;
-ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
 is_deeply \@results, [3, 0], 'right number of documents';
 
@@ -184,7 +181,6 @@ $delay  = Mojo::IOLoop->delay(
   }
 );
 $delay->wait;
-ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
 @docs = sort { $a->{test} <=> $b->{test} } @docs;
 is $docs[0]{test}, 1, 'right document';
@@ -201,7 +197,6 @@ $collection->find->batch_size(2)->all(
   }
 );
 Mojo::IOLoop->start;
-ok !$mango->is_active, 'no operations in progress';
 @docs = sort { $a->{test} <=> $b->{test} } @docs;
 is $docs[0]{test}, 1, 'right document';
 is $docs[1]{test}, 2, 'right document';
@@ -247,7 +242,6 @@ $delay  = Mojo::IOLoop->delay(
   }
 );
 $delay->wait;
-ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
 is_deeply $docs[0], $docs[1], 'found same document again';
 
@@ -277,7 +271,6 @@ $delay = Mojo::IOLoop->delay(
   }
 );
 $delay->wait;
-ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
 is $tail->{test}, 3, 'right document';
 is $tail->{_id}, $result, 'same document';
